RESOLVED FIXED48867
Key down calls are not being sent to the application.
https://bugs.webkit.org/show_bug.cgi?id=48867
Summary Key down calls are not being sent to the application.
Jing
Reported 2010-11-02 13:56:38 PDT
-keyDown is invoked from bottom of the responder chain to the top, so when WebKit2 receives a call to -keyDown and the web process does not handle it, it should call super so that the event continues to travel up.
Attachments
Patch (1.13 KB, patch)
2010-11-02 13:59 PDT, Jing
no flags
Jing
Comment 1 2010-11-02 13:59:48 PDT
Adam Roben (:aroben)
Comment 2 2010-11-02 15:15:35 PDT
It should be able to add a test to TestWebKitAPI for this. I'd be happy to help you do so, Jing.
WebKit Commit Bot
Comment 3 2010-11-02 19:17:17 PDT
The commit-queue encountered the following flaky tests while processing attachment 72730 [details]: fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by dumi@chromium.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-02 19:18:13 PDT
Comment on attachment 72730 [details] Patch Clearing flags on attachment: 72730 Committed r71203: <http://trac.webkit.org/changeset/71203>
WebKit Commit Bot
Comment 5 2010-11-02 19:18:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.