2010-11-02  Jing Jin  <jjin@apple.com>

Reviewed by Alexey Proskuryakov.

        Key down calls are not being sent to the application.
        https://bugs.webkit.org/show_bug.cgi?id=48867

        * UIProcess/API/mac/WKView.mm:
        (-[WKView keyDown:]): Call super when ignoring a key down.

Canonical link: https://commits.webkit.org/61696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71203 268f45cc-cd09-0410-ab3c-d52691b4dbfc